# telegram-summarizer

./: .gitignore  .goreleaser.yaml  Dockerfile  README.md  pyproject.toml
src/telegram_summarizer/: __init__.py  __main__.py
